# ai-agent-context-kit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_agent_context_kit/: __init__.py  budget.py  cli.py  core.py  ignore.py  models.py  safety.py
tests/: test_budget.py  test_cli.py  test_core.py  test_ignore.py  test_safety.py
