[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-context-kit"
version = "0.1.0"
description = "Build auditable, reproducible prompt/context bundles for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "ai-agent-context-kit contributors" }
]
keywords = ["ai", "agents", "codex", "claude-code", "cursor", "developer-tools", "prompt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]

[project.scripts]
aictx = "ai_agent_context_kit.cli:main"
ai-agent-context-kit = "ai_agent_context_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_agent_context_kit = ["py.typed"]
